# melanc-api

./: README.md  docker-compose.yml  pyproject.toml
.envs/: .env.development  .env.production
melanc/: main.py
melanc/api/diaries/: crud.py  models.py  views.py
melanc/api/users/: models.py
melanc/apps/diaries/: crud.py  models.py  schemas.py  views.py
melanc/apps/users/: crud.py  models.py  schemas.py  views.py
melanc/core/: app.py  base.py  config.py  db.py  logging.py
melanc/utils/: enums.py  singleton.py
tests/: test_version.py
